// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuVertical body renders without regressions 1`] = `
<div>
  <div
    className="MenuVertical__Body-sc-ul6jf3-2 eqlZSr"
  >
    <a
      className="Link__StyledLink-sc-ualt9-0 gpCrQD MenuVertical__MenuLink-sc-ul6jf3-3 fteZtz"
      href="/path-1"
      usePlainStyle={true}
    >
      title-1
    </a>
    <span
      className="MenuVertical__Separator-sc-ul6jf3-1 kMyFSY"
    />
    <a
      className="Link__StyledLink-sc-ualt9-0 gpCrQD MenuVertical__MenuLink-sc-ul6jf3-3 fteZtz"
      href="/path-2"
      usePlainStyle={true}
    >
      title-2
    </a>
  </div>
</div>
`;

exports[`MenuVertical head renders without regressions 1`] = `
<div>
  <button
    className="MenuVertical__MenuButton-sc-ul6jf3-0 kbcEtn"
    onClick={[Function]}
  >
    Menu
  </button>
</div>
`;

exports[`MenuVertical opened body renders without regressions 1`] = `
<div>
  <div
    className="MenuVertical__Body-sc-ul6jf3-2 kSbYRq"
  >
    <a
      className="Link__StyledLink-sc-ualt9-0 gpCrQD MenuVertical__MenuLink-sc-ul6jf3-3 fteZtz"
      href="/path-1"
      usePlainStyle={true}
    >
      title-1
    </a>
    <span
      className="MenuVertical__Separator-sc-ul6jf3-1 kMyFSY"
    />
    <a
      className="Link__StyledLink-sc-ualt9-0 gpCrQD MenuVertical__MenuLink-sc-ul6jf3-3 fteZtz"
      href="/path-2"
      usePlainStyle={true}
    >
      title-2
    </a>
  </div>
</div>
`;

exports[`MenuVertical opened head renders without regressions 1`] = `
<div>
  <button
    className="MenuVertical__MenuButton-sc-ul6jf3-0 dELnLz"
    onClick={[Function]}
  >
    Menu
  </button>
</div>
`;
